# vault_public

./: Cargo.toml  Igor_Raszkiewicz_0x7C43F6F7C217808F_public.asc  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md
docs/: ADR-001-language-choice.md  ADR-002-Argon2id-parametres.md  ADR-003-KDF-choice.md  ADR-004-AEAD-choice.md  ADR-005-MAC-choice.md  ADR-006-RNG-choice.md  ADR-007-data-storage-format.md  ADR-008-reading-passwords-choice.md  ADR-009-constanttimeeq_dependency.md  ARCHITECTURE.md  SPEC.md
src/: cli.rs  crypto.rs  format.rs  main.rs
tests/: adversarial.rs  e2e_terminal.rs
